Assignment 6/Asgn6_21CS10014_21CS30032/ass6_21CS10014_21CS30032.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH
    WS


State 341 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CHAR_CONSTANT
    3                   | STRING_LITERAL
    4                   | FLOATING_CONSTANT
    5                   | INTEGER_CONSTANT
    6                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    7 postfix_expression: primary_expression
    8                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
    9                   | postfix_expression ROUND_BRACKET_OPEN ROUND_BRACKET_CLOSE
   10                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list ROUND_BRACKET_CLOSE
   11                   | postfix_expression DOT IDENTIFIER
   12                   | postfix_expression ARROW IDENTIFIER
   13                   | postfix_expression INCREMENT
   14                   | postfix_expression DECREMENT
   15                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   16                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list COMMA assignment_expression

   19 unary_expression: postfix_expression
   20                 | INCREMENT unary_expression
   21                 | DECREMENT unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   25 unary_operator: BIT_AND
   26               | MULTIPLY
   27               | PLUS
   28               | MINUS
   29               | BITWISE_NOT
   30               | LOGICAL_NOT

   31 cast_expression: unary_expression
   32                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression MULTIPLY cast_expression
   35                          | multiplicative_expression DIVIDE cast_expression
   36                          | multiplicative_expression MODULO cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression MINUS multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_SHIFT additive_expression
   42                 | shift_expression RIGHT_SHIFT additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression LESS_THAN shift_expression
   45                      | relational_expression GREATER_THAN shift_expression
   46                      | relational_expression LESS_THAN_EQUAL shift_expression
   47                      | relational_expression GREATER_THAN_EQUAL shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQUAL relational_expression
   50                    | equality_expression NOT_EQUAL relational_expression

   51 AND_expression: equality_expression
   52               | AND_expression BIT_AND equality_expression

   53 exclusive_OR_expression: AND_expression
   54                        | exclusive_OR_expression BIT_XOR AND_expression

   55 inclusive_OR_expression: exclusive_OR_expression
   56                        | inclusive_OR_expression BIT_OR exclusive_OR_expression

   57 logical_AND_expression: inclusive_OR_expression
   58                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   59 logical_OR_expression: logical_AND_expression
   60                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   61 conditional_expression: logical_OR_expression
   62                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   63 M: %empty

   64 N: %empty

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: ASSIGN_T
   68                    | MULTIPLY_ASSIGN
   69                    | DIVIDE_ASSIGN
   70                    | MODULO_ASSIGN
   71                    | PLUS_ASSIGN
   72                    | MINUS_ASSIGN
   73                    | LEFT_SHIFT_ASSIGN
   74                    | RIGHT_SHIFT_ASSIGN
   75                    | BIT_AND_ASSIGN
   76                    | BIT_XOR_ASSIGN
   77                    | BIT_OR_ASSIGN

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers SEMICOLON
   82            | declaration_specifiers init_declarator_list SEMICOLON

   83 declaration_specifiers: storage_class_specifier declaration_specifiers
   84                       | storage_class_specifier
   85                       | type_specifier declaration_specifiers
   86                       | type_specifier
   87                       | type_qualifier declaration_specifiers
   88                       | type_qualifier
   89                       | function_specifier declaration_specifiers
   90                       | function_specifier

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator
   94                | declarator ASSIGN_T initializer

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID_T
  100               | CHAR_T
  101               | SHORT
  102               | INT_T
  103               | LONG
  104               | FLOAT_T
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL_T
  109               | COMPLEX
  110               | IMAGINARY
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  113                         | type_qualifier specifier_qualifier_list_opt

  114 specifier_qualifier_list_opt: specifier_qualifier_list
  115                             | %empty

  116 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  117               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  118               | ENUM IDENTIFIER

  119 identifier_opt: IDENTIFIER
  120               | %empty

  121 enumerator_list: enumerator
  122                | enumerator_list COMMA enumerator

  123 enumerator: IDENTIFIER
  124           | IDENTIFIER ASSIGN_T constant_expression

  125 type_qualifier: CONST
  126               | RESTRICT
  127               | VOLATILE

  128 function_specifier: INLINE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: IDENTIFIER
  132                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  133                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt SQUARE_BRACKET_CLOSE
  134                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list_opt assignment_expression SQUARE_BRACKET_CLOSE
  135                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  136                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt assignment_expression SQUARE_BRACKET_CLOSE
  137                  | direct_declarator ROUND_BRACKET_OPEN parameter_type_list_opt ROUND_BRACKET_CLOSE
  138                  | direct_declarator ROUND_BRACKET_OPEN identifier_list ROUND_BRACKET_CLOSE
  139                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt MULTIPLY SQUARE_BRACKET_CLOSE

  140 parameter_type_list_opt: parameter_type_list
  141                        | %empty

  142 type_qualifier_list_opt: type_qualifier_list
  143                        | %empty

  144 pointer: MULTIPLY type_qualifier_list
  145        | MULTIPLY type_qualifier_list pointer
  146        | MULTIPLY pointer
  147        | MULTIPLY

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list COMMA ELLIPSIS

  152 parameter_list: parameter_declaration
  153               | parameter_list COMMA parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list COMMA IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initializer: assignment_expression
  160            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  161            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  162 initializer_list: designation_opt initializer
  163                 | initializer_list COMMA designation_opt initializer

  164 designation_opt: designation
  165                | %empty

  166 designation: designator_list ASSIGN_T

  167 designator_list: designator
  168                | designator_list designator

  169 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  170           | DOT IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER COLON statement
  178                  | CASE constant_expression COLON statement
  179                  | DEFAULT COLON statement

  180 compound_statement: CURLY_BRACKET_OPEN CURLY_BRACKET_CLOSE
  181                   | CURLY_BRACKET_OPEN block_item_list CURLY_BRACKET_CLOSE

  182 block_item_list: block_item
  183                | block_item_list M block_item

  184 block_item: declaration
  185           | statement

  186 expression_statement: expression SEMICOLON
  187                     | SEMICOLON

  188 selection_statement: IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N
  189                    | IF ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement N ELSE M statement N
  190                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  191 iteration_statement: WHILE M ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE M statement
  192                    | DO M statement M WHILE ROUND_BRACKET_OPEN expression N ROUND_BRACKET_CLOSE SEMICOLON
  193                    | FOR ROUND_BRACKET_OPEN expression_statement M expression_statement N M expression N ROUND_BRACKET_CLOSE M statement

  194 jump_statement: GOTO_T IDENTIFIER SEMICOLON
  195               | CONTINUE SEMICOLON
  196               | BREAK SEMICOLON
  197               | RETURN_T SEMICOLON
  198               | RETURN_T expression SEMICOLON

  199 translation_unit: external_declaration
  200                 | translation_unit external_declaration

  201 external_declaration: function_definition
  202                     | declaration

  203 function_definition: declaration_specifiers declarator declaration_list compound_statement
  204                    | function_prototype compound_statement

  205 function_prototype: declaration_specifiers declarator

  206 declaration_list: declaration
  207                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 97
    BREAK (259) 196
    CASE (260) 178
    CHAR_T (261) 100
    CONST (262) 125
    CONTINUE (263) 195
    DEFAULT (264) 179
    DO (265) 192
    DOUBLE (266) 105
    ELSE (267) 189
    ENUM (268) 116 117 118
    EXTERN (269) 95
    FLOAT_T (270) 104
    FOR (271) 193
    GOTO_T (272) 194
    IF (273) 188 189
    INLINE (274) 128
    INT_T (275) 102
    LONG (276) 103
    REGISTER (277) 98
    RESTRICT (278) 126
    RETURN_T (279) 197 198
    SHORT (280) 101
    SIGNED (281) 106
    SIZEOF (282) 23 24
    STATIC (283) 96 134 135
    STRUCT (284)
    SWITCH (285) 190
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 107
    VOID_T (289) 99
    VOLATILE (290) 127
    WHILE (291) 191 192
    BOOL_T (292) 108
    COMPLEX (293) 109
    IMAGINARY (294) 110
    SQUARE_BRACKET_OPEN (295) 8 133 134 135 136 139 169
    SQUARE_BRACKET_CLOSE (296) 8 133 134 135 136 139 169
    ROUND_BRACKET_OPEN (297) 6 9 10 15 16 24 32 132 137 138 188 189 190 191 192 193
    ROUND_BRACKET_CLOSE (298) 6 9 10 15 16 24 32 132 137 138 188 189 190 191 192 193
    CURLY_BRACKET_OPEN (299) 15 16 116 117 160 161 180 181
    CURLY_BRACKET_CLOSE (300) 15 16 116 117 160 161 180 181
    DOT (301) 11 170
    ARROW (302) 12
    INCREMENT (303) 13 20
    DECREMENT (304) 14 21
    BIT_AND (305) 25 52
    BIT_OR (306) 56
    BIT_XOR (307) 54
    BITWISE_NOT (308) 29
    LOGICAL_AND (309) 58
    LOGICAL_OR (310) 60
    LOGICAL_NOT (311) 30
    MULTIPLY (312) 26 34 139 144 145 146 147
    DIVIDE (313) 35
    MODULO (314) 36
    PLUS (315) 27 38
    MINUS (316) 28 39
    LEFT_SHIFT (317) 41
    RIGHT_SHIFT (318) 42
    LESS_THAN (319) 44
    GREATER_THAN (320) 45
    LESS_THAN_EQUAL (321) 46
    GREATER_THAN_EQUAL (322) 47
    EQUAL (323) 49
    NOT_EQUAL (324) 50
    ASSIGN_T (325) 67 94 124 166
    PLUS_ASSIGN (326) 71
    MINUS_ASSIGN (327) 72
    MULTIPLY_ASSIGN (328) 68
    DIVIDE_ASSIGN (329) 69
    MODULO_ASSIGN (330) 70
    LEFT_SHIFT_ASSIGN (331) 73
    RIGHT_SHIFT_ASSIGN (332) 74
    BIT_AND_ASSIGN (333) 75
    BIT_XOR_ASSIGN (334) 76
    BIT_OR_ASSIGN (335) 77
    COMMA (336) 16 18 79 92 117 122 151 153 157 161 163
    COLON (337) 62 177 178 179
    SEMICOLON (338) 81 82 186 187 192 194 195 196 197 198
    ELLIPSIS (339) 151
    QUESTION_MARK (340) 62
    HASH (341)
    INTEGER_CONSTANT <intval> (342) 5
    FLOATING_CONSTANT <floatval> (343) 4
    CHAR_CONSTANT <charval> (344) 2
    STRING_LITERAL <str> (345) 3
    IDENTIFIER <str> (346) 1 11 12 118 119 123 124 131 156 157 170 177 194
    WS (347)


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    primary_expression <expr> (94)
        on left: 1 2 3 4 5 6
        on right: 7
    postfix_expression <expr> (95)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 8 9 10 11 12 13 14 19
    argument_expression_list <p_list> (96)
        on left: 17 18
        on right: 10 18
    unary_expression <expr> (97)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 66
    unary_operator <charval> (98)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression <expr> (99)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <expr> (100)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <expr> (101)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <expr> (102)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <expr> (103)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <expr> (104)
        on left: 48 49 50
        on right: 49 50 51 52
    AND_expression <expr> (105)
        on left: 51 52
        on right: 52 53 54
    exclusive_OR_expression <expr> (106)
        on left: 53 54
        on right: 54 55 56
    inclusive_OR_expression <expr> (107)
        on left: 55 56
        on right: 56 57 58
    logical_AND_expression <expr> (108)
        on left: 57 58
        on right: 58 59 60
    logical_OR_expression <expr> (109)
        on left: 59 60
        on right: 60 61 62
    conditional_expression <expr> (110)
        on left: 61 62
        on right: 62 65 80
    M <expr> (111)
        on left: 63
        on right: 58 60 62 183 188 189 191 192 193
    N <expr> (112)
        on left: 64
        on right: 62 188 189 191 192 193
    assignment_expression <expr> (113)
        on left: 65 66
        on right: 17 18 66 78 79 134 135 136 159
    assignment_operator (114)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression <expr> (115)
        on left: 78 79
        on right: 6 8 62 79 186 188 189 190 191 192 193 198
    constant_expression (116)
        on left: 80
        on right: 124 169 178
    declaration (117)
        on left: 81 82
        on right: 184 202 206 207
    declaration_specifiers <types> (118)
        on left: 83 84 85 86 87 88 89 90
        on right: 81 82 83 85 87 89 154 155 203 205
    init_declarator_list <dec_list> (119)
        on left: 91 92
        on right: 82 92
    init_declarator <dec> (120)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (121)
        on left: 95 96 97 98
        on right: 83 84
    type_specifier <types> (122)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 85 86 112
    specifier_qualifier_list (123)
        on left: 112 113
        on right: 114 158
    specifier_qualifier_list_opt (124)
        on left: 114 115
        on right: 112 113
    enum_specifier (125)
        on left: 116 117 118
        on right: 111
    identifier_opt (126)
        on left: 119 120
        on right: 116 117
    enumerator_list (127)
        on left: 121 122
        on right: 116 117 122
    enumerator (128)
        on left: 123 124
        on right: 121 122
    type_qualifier (129)
        on left: 125 126 127
        on right: 87 88 113 148 149
    function_specifier (130)
        on left: 128
        on right: 89 90
    declarator <dec> (131)
        on left: 129 130
        on right: 93 94 132 154 203 205
    direct_declarator <dec> (132)
        on left: 131 132 133 134 135 136 137 138 139
        on right: 129 130 133 134 135 136 137 138 139
    parameter_type_list_opt <p_list> (133)
        on left: 140 141
        on right: 137
    type_qualifier_list_opt (134)
        on left: 142 143
        on right: 133 134 136 139
    pointer <intval> (135)
        on left: 144 145 146 147
        on right: 129 145 146
    type_qualifier_list (136)
        on left: 148 149
        on right: 135 142 144 145 149
    parameter_type_list <p_list> (137)
        on left: 150 151
        on right: 140
    parameter_list <p_list> (138)
        on left: 152 153
        on right: 150 151 153
    parameter_declaration <p> (139)
        on left: 154 155
        on right: 152 153
    identifier_list (140)
        on left: 156 157
        on right: 138 157
    type_name (141)
        on left: 158
        on right: 15 16 24 32
    initializer <expr> (142)
        on left: 159 160 161
        on right: 94 162 163
    initializer_list (143)
        on left: 162 163
        on right: 15 16 160 161 163
    designation_opt (144)
        on left: 164 165
        on right: 162 163
    designation (145)
        on left: 166
        on right: 164
    designator_list (146)
        on left: 167 168
        on right: 166 168
    designator (147)
        on left: 169 170
        on right: 167 168
    statement <expr> (148)
        on left: 171 172 173 174 175 176
        on right: 177 178 179 185 188 189 190 191 192 193
    labeled_statement <expr> (149)
        on left: 177 178 179
        on right: 171
    compound_statement <expr> (150)
        on left: 180 181
        on right: 172 203 204
    block_item_list <expr> (151)
        on left: 182 183
        on right: 181 183
    block_item <expr> (152)
        on left: 184 185
        on right: 182 183
    expression_statement <expr> (153)
        on left: 186 187
        on right: 173 193
    selection_statement <expr> (154)
        on left: 188 189 190
        on right: 174
    iteration_statement <expr> (155)
        on left: 191 192 193
        on right: 175
    jump_statement <expr> (156)
        on left: 194 195 196 197 198
        on right: 176
    translation_unit (157)
        on left: 199 200
        on right: 0 200
    external_declaration (158)
        on left: 201 202
        on right: 199 200
    function_definition (159)
        on left: 203 204
        on right: 201
    function_prototype <dec> (160)
        on left: 205
        on right: 204
    declaration_list (161)
        on left: 206 207
        on right: 203 207


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31
    function_prototype       go to state 32


State 1

   97 storage_class_specifier: AUTO .

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  100 type_specifier: CHAR_T .

    $default  reduce using rule 100 (type_specifier)


State 3

  125 type_qualifier: CONST .

    $default  reduce using rule 125 (type_qualifier)


State 4

  105 type_specifier: DOUBLE .

    $default  reduce using rule 105 (type_specifier)


State 5

  116 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  117               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  118               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 33

    $default  reduce using rule 120 (identifier_opt)

    identifier_opt  go to state 34


State 6

   95 storage_class_specifier: EXTERN .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  104 type_specifier: FLOAT_T .

    $default  reduce using rule 104 (type_specifier)


State 8

  128 function_specifier: INLINE .

    $default  reduce using rule 128 (function_specifier)


State 9

  102 type_specifier: INT_T .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: LONG .

    $default  reduce using rule 103 (type_specifier)


State 11

   98 storage_class_specifier: REGISTER .

    $default  reduce using rule 98 (storage_class_specifier)


State 12

  126 type_qualifier: RESTRICT .

    $default  reduce using rule 126 (type_qualifier)


State 13

  101 type_specifier: SHORT .

    $default  reduce using rule 101 (type_specifier)


State 14

  106 type_specifier: SIGNED .

    $default  reduce using rule 106 (type_specifier)


State 15

   96 storage_class_specifier: STATIC .

    $default  reduce using rule 96 (storage_class_specifier)


State 16

  107 type_specifier: UNSIGNED .

    $default  reduce using rule 107 (type_specifier)


State 17

   99 type_specifier: VOID_T .

    $default  reduce using rule 99 (type_specifier)


State 18

  127 type_qualifier: VOLATILE .

    $default  reduce using rule 127 (type_qualifier)


State 19

  108 type_specifier: BOOL_T .

    $default  reduce using rule 108 (type_specifier)


State 20

  109 type_specifier: COMPLEX .

    $default  reduce using rule 109 (type_specifier)


State 21

  110 type_specifier: IMAGINARY .

    $default  reduce using rule 110 (type_specifier)


State 22

  202 external_declaration: declaration .

    $default  reduce using rule 202 (external_declaration)


State 23

   81 declaration: declaration_specifiers . SEMICOLON
   82            | declaration_specifiers . init_declarator_list SEMICOLON
  203 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  205 function_prototype: declaration_specifiers . declarator

    ROUND_BRACKET_OPEN  shift, and go to state 35
    MULTIPLY            shift, and go to state 36
    SEMICOLON           shift, and go to state 37
    IDENTIFIER          shift, and go to state 38

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42
    pointer               go to state 43


State 24

   83 declaration_specifiers: storage_class_specifier . declaration_specifiers
   84                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 25

   85 declaration_specifiers: type_specifier . declaration_specifiers
   86                       | type_specifier .

    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 26

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 27

   87 declaration_specifiers: type_qualifier . declaration_specifiers
   88                       | type_qualifier .

    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 28

   89 declaration_specifiers: function_specifier . declaration_specifiers
   90                       | function_specifier .

    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28


State 29

    0 $accept: translation_unit . $end
  200 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 48
    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 49
    function_definition      go to state 31
    function_prototype       go to state 32


State 30

  199 translation_unit: external_declaration .

    $default  reduce using rule 199 (translation_unit)


State 31

  201 external_declaration: function_definition .

    $default  reduce using rule 201 (external_declaration)


State 32

  204 function_definition: function_prototype . compound_statement

    CURLY_BRACKET_OPEN  shift, and go to state 50

    compound_statement  go to state 51


State 33

  118 enum_specifier: ENUM IDENTIFIER .
  119 identifier_opt: IDENTIFIER .

    CURLY_BRACKET_OPEN  reduce using rule 119 (identifier_opt)
    $default            reduce using rule 118 (enum_specifier)


State 34

  116 enum_specifier: ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  117               | ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 52


State 35

  132 direct_declarator: ROUND_BRACKET_OPEN . declarator ROUND_BRACKET_CLOSE

    ROUND_BRACKET_OPEN  shift, and go to state 35
    MULTIPLY            shift, and go to state 36
    IDENTIFIER          shift, and go to state 38

    declarator         go to state 53
    direct_declarator  go to state 42
    pointer            go to state 43


State 36

  144 pointer: MULTIPLY . type_qualifier_list
  145        | MULTIPLY . type_qualifier_list pointer
  146        | MULTIPLY . pointer
  147        | MULTIPLY .

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    MULTIPLY  shift, and go to state 36

    $default  reduce using rule 147 (pointer)

    type_qualifier       go to state 54
    pointer              go to state 55
    type_qualifier_list  go to state 56


State 37

   81 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 81 (declaration)


State 38

  131 direct_declarator: IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


State 39

   82 declaration: declaration_specifiers init_declarator_list . SEMICOLON
   92 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA      shift, and go to state 57
    SEMICOLON  shift, and go to state 58


State 40

   91 init_declarator_list: init_declarator .

    $default  reduce using rule 91 (init_declarator_list)


State 41

   93 init_declarator: declarator .
   94                | declarator . ASSIGN_T initializer
  203 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  205 function_prototype: declaration_specifiers declarator .

    AUTO       shift, and go to state 1
    CHAR_T     shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT_T    shift, and go to state 7
    INLINE     shift, and go to state 8
    INT_T      shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID_T     shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL_T     shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    ASSIGN_T   shift, and go to state 59

    CURLY_BRACKET_OPEN  reduce using rule 205 (function_prototype)
    $default            reduce using rule 93 (init_declarator)

    declaration              go to state 60
    declaration_specifiers   go to state 61
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list         go to state 62


State 42
